@@ -1,4 +1,5 @@
 4.2.2
+	Make LDAP querries timeout configurable
 	Make MX sync timeout peer-configurable (Attila Bruncsak)
 4.2.1
 	Fix a crash when a LDAP server is down
